[gd_scene load_steps=20 format=3 uid="uid://cnpgir75n6dgl"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_64fqt"]
[ext_resource type="FontFile" uid="uid://xrudeiuywrxk" path="res://assets/fonts/PixelOperator8.ttf" id="2_mdka8"]
[ext_resource type="Texture2D" uid="uid://kir1ldklncas" path="res://assets/sprites/NPCS/Wizard Pack/dialogue.png" id="3_3vgvc"]
[ext_resource type="FontFile" uid="uid://cj4qjstjnmyrg" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_libq2"]
[ext_resource type="Texture2D" uid="uid://dcy1obuvgwlwl" path="res://assets/sprites/skills/skill0/FB500-1.png" id="4_sy2fj"]
[ext_resource type="Texture2D" uid="uid://bvkstdv21j4r7" path="res://assets/sprites/skills/Retro Impact Effect Pack 2 A.png" id="5_nc244"]
[ext_resource type="Texture2D" uid="uid://e44lxyu1aoqw" path="res://assets/sprites/skills/Yellow Effect Bullet Impact Explosion 32x32.png" id="6_mj6s8"]

[sub_resource type="InputEventAction" id="InputEventAction_44bov"]
action = &"skill0"

[sub_resource type="Shortcut" id="Shortcut_63jbj"]
events = [SubResource("InputEventAction_44bov")]

[sub_resource type="AtlasTexture" id="AtlasTexture_ge7wy"]
atlas = ExtResource("5_nc244")
region = Rect2(0, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_50a5h"]
atlas = ExtResource("5_nc244")
region = Rect2(64, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rh0e"]
atlas = ExtResource("5_nc244")
region = Rect2(128, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10sp8"]
atlas = ExtResource("5_nc244")
region = Rect2(192, 1024, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yrqfd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge7wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50a5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rh0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10sp8")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lccpr"]
atlas = ExtResource("6_mj6s8")
region = Rect2(608, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n78v"]
atlas = ExtResource("6_mj6s8")
region = Rect2(512, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_677d8"]
atlas = ExtResource("6_mj6s8")
region = Rect2(544, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbsh1"]
atlas = ExtResource("6_mj6s8")
region = Rect2(576, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3jjw3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lccpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n78v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_677d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbsh1")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="HUD" type="Node2D"]
script = ExtResource("1_64fqt")

[node name="Display" type="CanvasLayer" parent="."]

[node name="hp" type="Label" parent="Display"]
offset_left = 12.0
offset_top = 11.0
offset_right = 356.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("2_mdka8")
theme_override_font_sizes/font_size = 24
text = "‚ù§Ô∏è‚ù§Ô∏è‚ù§Ô∏è‚ù§Ô∏è‚ù§Ô∏è"
metadata/_edit_use_anchors_ = true

[node name="coins" type="Label" parent="Display"]
offset_left = 12.0
offset_top = 42.0
offset_right = 278.0
offset_bottom = 97.0
theme_override_fonts/font = ExtResource("2_mdka8")
theme_override_font_sizes/font_size = 24
text = "ü™ôx8"
metadata/_edit_use_anchors_ = true

[node name="mauricedialogue" type="Button" parent="Display"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -246.0
offset_top = 31.0
offset_right = 28.0
offset_bottom = 98.0
grow_horizontal = 2
scale = Vector2(1.8, 1.8)
icon = ExtResource("3_3vgvc")
alignment = 0

[node name="spacecont" type="Label" parent="Display/mauricedialogue"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.555
anchor_right = 0.555
offset_left = -55.07
offset_top = 58.3333
offset_right = 106.93
offset_bottom = 66.3333
grow_horizontal = 2
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("2_mdka8")
theme_override_font_sizes/font_size = 8
text = "Press (space) to continue"

[node name="name" type="Label" parent="Display/mauricedialogue"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.067
anchor_right = 0.067
offset_left = -17.2469
offset_top = 54.4444
offset_right = 31.7531
offset_bottom = 62.4445
grow_horizontal = 2
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("2_mdka8")
theme_override_font_sizes/font_size = 8
text = "Maurice"

[node name="dialogue" type="Label" parent="Display/mauricedialogue"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.555
anchor_right = 0.555
offset_left = -115.07
offset_top = 5.0
offset_right = 271.93
offset_bottom = 89.0
grow_horizontal = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_mdka8")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="fireball_icon" type="Button" parent="Display"]
visible = false
offset_left = 384.0
offset_top = 539.0
offset_right = 904.0
offset_bottom = 1059.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("3_libq2")
theme_override_font_sizes/font_size = 128
action_mode = 0
shortcut = SubResource("Shortcut_63jbj")
text = "J"
icon = ExtResource("4_sy2fj")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="fireball_casting" type="Button" parent="Display/fireball_icon"]
visible = false
z_index = 3
layout_mode = 0
offset_right = 520.0
offset_bottom = 500.0
theme_override_fonts/font = ExtResource("3_libq2")
theme_override_font_sizes/font_size = 128
icon_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Display/fireball_icon"]
visible = false
position = Vector2(259, 259)
scale = Vector2(9.09375, 9.09375)
sprite_frames = SubResource("SpriteFrames_yrqfd")
frame = 3
frame_progress = 1.0

[node name="insta_cast" type="AnimatedSprite2D" parent="Display"]
visible = false
position = Vector2(410, 563)
scale = Vector2(-2.30216, 2.30216)
sprite_frames = SubResource("SpriteFrames_3jjw3")
frame_progress = 0.259055

[node name="fireball_casting_time" type="Timer" parent="."]

[connection signal="timeout" from="fireball_casting_time" to="." method="_on_fireball_casting_time_timeout"]
